page titles added, minor other changes

--- a/MARV/WebContent/CSS/style2.css
+++ b/MARV/WebContent/CSS/style2.css
@@ -63,6 +63,7 @@ h1,h2,h3,h4,h5,h6{
 	margin: 2px 0px;
 	color: #777;
 	font-weight: 400;
+	margin-bottom: 20px;
 }
 
 h2{
@@ -333,37 +334,14 @@ a.btn{
 	color:#333;
 	text-decoration:none;
 	display:block;
-	padding:10px 14px;
+	padding:5px 20px;
 	cursor: pointer;
 	position: relative;
 }
 	
 .resultsList li{ 
-	border-top: 1px solid #fff; 
-	border-bottom: 1px solid #cecece; 
-	border-left: 1px solid #cecece;
-	border-right: 1px solid #fff;
-	width: 200px;
+	width: 50%;
 	float: left;
-	background: #f7f7f7;
-	background: -moz-linear-gradient(top,  #f7f7f7 0%, #e6e6e6 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7f7f7), color-stop(100%,#e6e6e6));
-	background: -webkit-linear-gradient(top,  #f7f7f7 0%,#e6e6e6 100%);
-	background: -o-linear-gradient(top,  #f7f7f7 0%,#e6e6e6 100%);
-	background: -ms-linear-gradient(top,  #f7f7f7 0%,#e6e6e6 100%);
-	background: linear-gradient(top,  #f7f7f7 0%,#e6e6e6 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#e6e6e6',GradientType=0 );
- }
- 
-.resultsList li:hover {  
-	background: #fbfbfb;
-	background: -moz-linear-gradient(top,  #fbfbfb 0%, #e8e8e8 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fbfbfb), color-stop(100%,#e8e8e8));
-	background: -webkit-linear-gradient(top,  #fbfbfb 0%,#e8e8e8 100%);
-	background: -o-linear-gradient(top,  #fbfbfb 0%,#e8e8e8 100%);
-	background: -ms-linear-gradient(top,  #fbfbfb 0%,#e8e8e8 100%);
-	background: linear-gradient(top,  #fbfbfb 0%,#e8e8e8 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fbfbfb', endColorstr='#e8e8e8',GradientType=0 );
  }
 
 
@@ -815,6 +793,7 @@ form label{
 	width: auto;
 	background:#fff;
 	min-height: 900px;
+	padding: 20px 20px 0 20px;
 }
 
 .mainbar .container{
